--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "js2xmlparser": "^4.0.1",
     "knex": "^0.21.1",
     "moment": "^2.25.3",
     "mssql": "^6.2.0",
