--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/drawer": "^5.8.4",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
-    "expo": "~38.0.8",
+    "expo": "^38.0.8",
     "expo-status-bar": "^1.0.2",
     "linear-gradient": "^1.0.6",
     "react": "~16.11.0",
