expo update libraries

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,12 @@
     "axios": "^0.19.2",
     "esdoc-ecmascript-proposal-plugin": "^1.0.0",
     "esdoc-jsx-plugin": "^1.0.0",
-    "expo": "^38.0.8",
-    "expo-status-bar": "^1.0.2",
+    "expo": "^38.0.0",
+    "expo-status-bar": "^1.0.0",
     "linear-gradient": "^1.0.6",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0",
+    "babel-preset-expo": "^8.2.3",
     "esdoc": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0"
   },
