--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "esdoc": "node_modules/.bin/esdoc -c .esdoc.json"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/drawer": "^5.8.4",
@@ -20,6 +21,7 @@
     "expo": "^38.0.0",
     "expo-status-bar": "^1.0.0",
     "linear-gradient": "^1.0.6",
+    "moment": "^2.27.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
