--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,9 @@
     "nodejs": "0.0.0",
     "xml-js": "^1.6.11"
   },
+  "engines": {
+    "node": "14.6.0"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
