--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.7.0",
     "axios": "^0.19.2",
-    "expo": "^39.0.0",
+    "expo": "^39.0.3",
     "expo-image-picker": "~9.1.0",
+    "expo-location": "~9.0.0",
+    "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
     "linear-gradient": "^1.0.6",
     "moment": "^2.27.0",
@@ -25,6 +27,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-maps": "0.27.1",
     "react-native-paper": "^4.2.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
