Improved report page(MapView, Connection to API reports, and some issues was solved)

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -20,7 +20,8 @@
       "supportsTablet": true
     },
     "android": {
-      "softwareKeyboardLayoutMode": "pan"
+      "softwareKeyboardLayoutMode": "pan",
+      "permissions": ["ACCESS_COARSE_LOCATION", "ACCESS_FINE_LOCATION"]
     },
     "web": {
       "favicon": "./assets/favicon.png"
