--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "linear-gradient": "^1.0.6",
     "moment": "^2.27.0",
     "react": "16.13.1",
+    "react-content-loader": "^5.1.4",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
@@ -34,6 +35,7 @@
     "react-native-screens": "~2.10.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.13.7",
+    "react-native-webview": "10.7.0",
     "react-navigation-transitions": "^1.0.12"
   },
   "devDependencies": {
