--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 API_TOKEN = "TKCTCSMN06031216"
+MP_ACCESS_TOKEN=TEST-7922977889294773-111016-95e82d1a67329d07300f211f187c0b26-183682985
+SANDBOX=true
