--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,20 @@
   "main": "app.js",
   "dependencies": {
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "consolidate": "^0.16.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "js2xmlparser": "^4.0.1",
     "knex": "^0.21.1",
+    "mercadopago": "^1.5.0",
     "moment": "^2.25.3",
     "mssql": "^6.2.0",
     "nodejs": "0.0.0",
-    "xml-js": "^1.6.11"
+    "xml-js": "^1.6.11",
+    "yargs": "^16.1.0"
   },
   "engines": {
     "node": "14.6.0"
