--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "joi": "^17.3.0",
     "js2xmlparser": "^4.0.1",
     "knex": "^0.21.1",
     "mercadopago": "^1.5.0",
