--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^5.7.0",
     "axios": "^0.19.2",
     "expo": "^39.0.3",
+    "expo-cli": "^4.0.8",
     "expo-image-picker": "~9.1.0",
     "expo-location": "~9.0.0",
     "expo-permissions": "~9.3.0",
@@ -26,6 +27,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
+    "react-native-geocoding": "^0.4.0",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-maps": "0.27.1",
     "react-native-modal": "^11.5.6",
